// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvVars tests should have a complete config for all env variables set 1`] = `
Object {
  "additionalResultsProcessors": Array [
    "one",
    "two",
    "three",
  ],
  "coverageLink": "www.walmart.com",
  "disableCharts": false,
  "generatePdf": false,
  "hideFailing": true,
  "hidePassing": true,
  "hidePending": undefined,
  "inlineSource": false,
  "jestGlobalConfigJson": undefined,
  "jestStareConfigJson": "true",
  "log": false,
  "report": undefined,
  "reportHeadline": "my title",
  "reportSummary": false,
  "reportTitle": "my title!",
  "resultDir": "some/dir",
  "resultHtml": "some.html",
  "resultJson": "some.json",
}
`;

exports[`EnvVars tests should have a complete config for all env variables set 2`] = `
Object {
  "additionalResultsProcessors": Array [
    "one",
    "two",
    "three",
  ],
  "coverageLink": "www.walmart.com",
  "disableCharts": false,
  "generatePdf": false,
  "hideFailing": true,
  "hidePassing": true,
  "inlineSource": false,
  "jestStareConfigJson": "true",
  "log": false,
  "reportHeadline": "my title",
  "reportSummary": false,
  "reportTitle": "my title!",
  "resultDir": "some/dir",
  "resultHtml": "some.html",
  "resultJson": "some.json",
}
`;

exports[`EnvVars tests should have an empty config for no env variables set 1`] = `
Object {
  "additionalResultsProcessors": undefined,
  "coverageLink": undefined,
  "disableCharts": undefined,
  "generatePdf": undefined,
  "hideFailing": undefined,
  "hidePassing": undefined,
  "hidePending": undefined,
  "inlineSource": undefined,
  "jestGlobalConfigJson": undefined,
  "jestStareConfigJson": undefined,
  "log": undefined,
  "report": undefined,
  "reportHeadline": undefined,
  "reportSummary": undefined,
  "reportTitle": undefined,
  "resultDir": undefined,
  "resultHtml": undefined,
  "resultJson": undefined,
}
`;
